# canyonjs-playwright-python

./: .gitignore  README.md  pyproject.toml  release.md  requirements.txt
.github/workflows/: playwright.yml  publish.yml
src/canyonjs_playwright/: __init__.py  fixtures.py  pytest_plugin.py
tests/: conftest.py  test_baidu.py  test_canyon.py
